# nipype-interfaces

./: .gitignore  LICENSE  README.md  long_description.rst  pyproject.toml  setup.cfg  setup.py
ifsnipype/: __init__.py  dynamic_slicer.py  io.py
ifsnipype/afni/: base.py
ifsnipype/base/: clis.py  core.py  python.py  specs.py  support.py  traits.py  traits_extension.py
ifsnipype/base/tests/: test_core.py  test_specs.py
ifsnipype/freesurfer/tests/: test_FSSurfaceCommand.py
ifsnipype/fsl/tests/: test_preprocess.py
ifsnipype/spm/: base.py
