[metadata]
name = ifsnipype
classifiers =
    Development Status :: 5 - Production/Stable
    Environment :: Console
    Intended Audience :: Science/Research
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Operating System :: MacOS :: MacOS X
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Topic :: Scientific/Engineering :: Image Recognition
    Topic :: Scientific/Engineering :: Bio-Informatics
    Topic :: Scientific/Engineering :: Image Processing
description = Neuroimaging in Python: Nipype Interfaces
license = Apache License, Version 2.0
long_description = file:long_description.rst
long_description_content_type = text/x-rst; charset=UTF-8
maintainer = The Nipy developers
maintainer_email = neuroimaging@python.org
project_urls =
    Documentation = http://nipy.org/nipype
url = https://github.com/nipype/nipype-interfaces

[options]
python_requires = >= 3.7
setup_requires =
    setuptools >= 45
    setuptools_scm >= 6.2
    wheel
install_requires =
    importlib-metadata; python_version<'3.8'
test_requires =
    coverage
    pytest
    pytest-cov
    pytest-env
    pytest-timeout
    pytest-xdist
packages = find:
include_package_data = True

[options.package_data]
ifsnipype =
    _data/*

[options.packages.find]
exclude =
    *.tests

[options.extras_require]
doc =
    packaging
    pydot>=1.2.3
    pydotplus
    sphinx-argparse
    sphinx_rtd_theme
    sphinx~=4.0

docs =
    %(doc)s

[flake8]
max-line-length = 99
doctests = True
ignore =
    E266
    W503
exclude=*build/
per-file-ignores =
    */__init__.py: F401
